--- a/IBAN.css
+++ b/IBAN.css
@@ -8,8 +8,8 @@
 }
 
 .virsus {
+    padding-top: 20px;
     width:100%; 
-    padding:20px; 
     text-align: center;
 }
 
@@ -18,7 +18,7 @@
 }
 
 .pvz  {
-    width: 100%;
+    width: 80%;
 } 
 
 
